# ModelMatch3D

./: .gitignore  BiteID.py  CMakeLists.txt  LICENSE-BiteID.txt  README.md
Resources/UI/: BiteID.ui
